Yazar panelinde sol tarafta giriş yapan yazarın isim bilgisi getirildi.

--- a/CoreDemo/Areas/Admin/Views/AdminComment/Index.cshtml
+++ b/CoreDemo/Areas/Admin/Views/AdminComment/Index.cshtml
@@ -5,7 +5,7 @@
 	ViewData["Title"] = "Index";
 	Layout = "~/Views/Shared/AdminLayout.cshtml";
 }
-<td><a href="#"><i class="fa fa-check text-navy"></i></a></td>
+@*<td><a href="#"><i class="fa fa-check text-navy"></i></a></td>*@
 <!DOCTYPE html>
 <html>
 
@@ -43,7 +43,7 @@
 								<tr>
 									<th>#</th>
 									<th>Kullanıcı</th>
-									<th>Başlk</th>
+									<th>Başlık</th>
 									<th>Blog</th>
 									<th>Tarih</th>
 								</tr>
