--- a/CoreDemo/Views/Shared/Components/WritterNavbarName/Default.cshtml
+++ b/CoreDemo/Views/Shared/Components/WritterNavbarName/Default.cshtml
@@ -1,4 +1,5 @@
-﻿﻿
+﻿@using CoreDemo.ViewComponents.Writter
+﻿
 <li class="nav-item nav-profile">
     <a href="#" class="nav-link">
         <div class="nav-profile-image">
